# esp-ir

./: CMakeLists.txt  README.md
components/esp_ir/: CMakeLists.txt
config/: system_config.json  system_config.schema.json
docs/: architecture.md
main/: CMakeLists.txt  app_main.cpp
src/ir/: ir_learner.h  ir_sender.cpp  ir_sender.h
src/model/: ir_model.cpp  ir_model.h
src/net/: esp_idf_adapters.cpp  esp_idf_adapters.h  network_services.cpp  network_services.h  trigger_router.cpp  trigger_router.h
src/platform/: board_pins.cpp  board_pins.h
src/storage/: config_manager.cpp  config_manager.h  raw_store.h
src/system/: boot_manager.cpp  boot_manager.h  reliability.h
src/ui/: ui_state.h
tests/: config_parser_fuzz_test.py
